# plant-traits

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
model/: constants.py  dataset.py  main.py  model.py  train.py  utils.py
notebooks/: bad_images.ipynb  kaggle_nb.ipynb  outliers.ipynb  preprocess.ipynb  preprocess_species.ipynb
plant-traits/: preprocess_utils.py
plant-traits/model/: main.py
plant-traits/species_model/: dataset.py  main.py  models.py  train.py
plant_traits/: augmentation.py  constants.py  preprocess_utils.py  utils.py
plant_traits/model/: dataset.py  main.py  models.py  train.py
plant_traits/species_model/: dataset.py  main.py  models.py  train.py
run_script/: run.py
src/: constants.py  main.py  preprocess_utils.py  utils.py
src/model/: dataset.py  main.py  model.py  models.py  train.py
src/species_model/: dataset.py  main.py  models.py  train.py
