[tool.poetry]
name = "plant-traits"
version = "0.1.0"
description = ""
authors = ["Agustin Sanchez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"
pandas = "^2.2.1"
jupyterlab = "^4.1.5"
path = "^16.10.0"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
joblib = "^1.3.2"
tqdm = "^4.66.2"
imageio = "^2.34.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.3.0"
isort = "^5.13.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
